Bug-8583: Added xss  invalid message with id 'errors.xss.invalid'
SVN-Revision: 14492

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -589,6 +589,7 @@ errors.multiplespecimen.minimumspecimen=<li><font color="red">Number of Specimen
 errors.container.closed=<li><font color="red">This Container is closed.</font></li>
 errors.capacity.greaterThan0=<li><font color="red">{0} should be greater than 0.</font></li>
 errors.disable.specimen=<li><font color="red">First disable Specimens.</font></li>
+errors.xss.invalid=<li><font color="red">{0} is invalid. It should not contain (, ), < or > character.</font></li>
 #--Error Keys End--
 
 #--Header,Footer Keys Begin--
